--- a/src/app/town-list/town-list.component.html
+++ b/src/app/town-list/town-list.component.html
@@ -1,12 +1,14 @@
 <div class="row">
-  <div class="col l3 m4 s12" *ngFor="let t of towns; let i = index;">
+  <div class="col l4 m5 s12" *ngFor="let t of towns; let i = index;">
     <div class="card blue-grey darken-1">
       <div class="card-content white-text">
         <span class="card-title truncate">{{t.city}}</span>
         <app-wheather [wheather]="t.weather"></app-wheather>
       </div>
       <div class="card-action pink">
-
+        <agm-map class="map" [latitude]="t.latitude" [longitude]="t.longitude">
+          <agm-marker [latitude]="t.latitude" [longitude]="t.longitude"></agm-marker>
+        </agm-map>
       </div>
     </div>
   </div>
