--- a/src/app/wheather/wheather.component.html
+++ b/src/app/wheather/wheather.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col s6">
+  <div class="col s6 valign-wrapper center-align">
     <i class="wi fa-3x  wi-forecast-io-{{wheather.icon}}"></i>
   </div>
-  <div class="col s6">
+  <div class="col s6 valign-wrapper center-align">
     <h5>{{wheather.temperature}} °C</h5>
   </div>
 </div>
