--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,5 @@
 <nav class="light-blue lighten-1" role="navigation">
-  <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
-    <ul class="right hide-on-med-and-down">
-      <li><a href="#">Navbar Link</a></li>
-    </ul>
-
-    <ul id="nav-mobile" class="sidenav">
-      <li><a href="#">Navbar Link</a></li>
-    </ul>
+  <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Town wheather</a>
     <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
   </div>
 </nav>
@@ -14,5 +7,8 @@
 
 <div class="container">
   <app-town-list></app-town-list>
+  <div preload class="progress valign-wrapper center-align">
+    <div class="indeterminate"></div>
+  </div>
 </div>
 
