--- a/src/app/town-list/town-list.component.html
+++ b/src/app/town-list/town-list.component.html
@@ -1,4 +1,7 @@
 <div class="row">
+  <div *ngIf="!towns.length" preload class="progress valign-wrapper center-align">
+    <div class="indeterminate"></div>
+  </div>
   <div class="col l4 m5 s12" *ngFor="let t of towns; let i = index;">
     <div class="card blue-grey darken-1">
       <div class="card-content white-text">
