--- a/src/app/town-list/town-list.component.html
+++ b/src/app/town-list/town-list.component.html
@@ -2,17 +2,5 @@
   <div *ngIf="!towns.length" preload class="progress valign-wrapper center-align">
     <div class="indeterminate"></div>
   </div>
-  <div class="col l4 m5 s12" *ngFor="let t of towns; let i = index;">
-    <div class="card blue-grey darken-1">
-      <div class="card-content white-text">
-        <span class="card-title truncate">{{t.city}}</span>
-        <app-wheather [wheather]="t.weather"></app-wheather>
-      </div>
-      <div class="card-action pink">
-        <agm-map class="map" [latitude]="t.latitude" [longitude]="t.longitude">
-          <agm-marker [latitude]="t.latitude" [longitude]="t.longitude"></agm-marker>
-        </agm-map>
-      </div>
-    </div>
-  </div>
+  <app-town [town]="t" *ngFor="let t of towns"></app-town>
 </div>
