--- a/src/app/town/town.component.html
+++ b/src/app/town/town.component.html
@@ -3,8 +3,16 @@
     <div class="card-content white-text">
       <span class="card-title truncate">{{town.city}}</span>
       <app-wheather [wheather]="town.weather"></app-wheather>
+      <div class="row mb0">
+        <div class="col l6 m6 s6">
+          <h6>{{count}} Minutes ago</h6>
+        </div>
+        <div class="col l6 m6 s6">
+          <a (click)="reloadWeather()" class="btn-floating btn-large waves-effect waves-light light-blue lighten-1"><i class="material-icons left">refresh</i></a>
+        </div>
+      </div>
     </div>
-    <div class="card-action pink">
+    <div class="card-action light-blue lighten-1">
       <agm-map class="map" [latitude]="town.latitude" [longitude]="town.longitude">
         <agm-marker [latitude]="town.latitude" [longitude]="town.longitude"></agm-marker>
       </agm-map>
